--- a/index.html
+++ b/index.html
@@ -1,31 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form-js-Workshop</title>
-    <link rel="stylesheet" href="app.css">
-     <script src="App.js" defer></script>
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
-</head>
-<body>
-   <header></header>
-<main id = root></main>
-<script></script>
-<form action ="/action_page.php">
-  <label for="">Enter a Number</label><br>
-   <input type="text" id="calculate" name="fname" value=""><br>
-    <input type="submit" value="calculate">
-    
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Form JS Workshop</title>
+    <link rel="stylesheet" href="app.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <main id="root" class="container">
+      <section id="getName">
+        <p>Hello what is your name:</p>
+        <input type="text" id="usernameField" name="fname" value="" /><br />
+        <button onclick="setName()">Save</button>
+      </section>
+      <div id="greeting">
+        <p class="text-center">Hello <span id="username"></span></p>
+        <p class="text-center">Would you like to fill a form?</p>
+        <div id="button">
+          <input
+            type="submit"
+            value="Yes"
+            onclick="onYes()"
+            style="background-color: greenyellow"
+          />
+          <input
+            type="submit"
+            value="No"
+            onclick="onNo()"
+            style="background-color: red; color: white"
+          />
+        </div>
+      </div>
 
+      <section id="feedback">
+        <span
+          style="
+            background-color: antiquewhite;
+            color: green;
+            border-radius: 8px;
+            font-weight: bold;
+          "
+          class="m-3 text-center"
+          ><strong>Thank You, Bye!👍 </strong></span
+        >
+      </section>
 
-  
-</form> 
+      <section id="form">
+        <form action="" onsubmit="start(event)">
+          <h1 class="text-center">Form JS Workshop</h1>
+          <label class="form-label m-3" for="">Enter a Number:</label><br />
+          <input
+            class="form-control"
+            type="text"
+            id="calculate"
+            name="fname"
+            value=""
+          /><br />
+          <label class="form-label m-3" for="">Enter your Email:</label><br />
+          <input
+            class="form-control"
+            type="text"
+            id="email"
+            name="fname"
+            value=""
+          /><br />
+          <input type="submit" value="Calculate" />
+          <input type="submit" value="Display" />
+          <span
+            id="error-message"
+            style="
+              background-color: antiquewhite;
+              color: darkred;
+              border-radius: 8px;
+              visibility: hidden;
+              font-weight: bold;
+            "
+            class="m-3 text-center"
+            >This is not a number!</span
+          >
+        </form>
+      </section>
+    </main>
 
-
-
-
-
-<footer></footer>
-</body>
+    <footer></footer>
+    <script type="module" src="App.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
